2002-03-05  Ian Lance Taylor  <ian@airs.com>

	* configure.in: Don't define SBINDIR.
	* unix/Makefile.am (AM_CFLAGS): Define SBINDIR.
	* configure, config.h.in, unix/Makefile.in: Rebuild.

	* Makefile.am (EXTRA_DIST): Define.
	* Makefile.in: Rebuild.

	* Makefile.am (UUHEADERS): Add sysdep.h.
	* unix/Makefile.am (libunix_a_SOURCES): Add fsusg.h.
	* uuconf/Makefile.am (libuuconf_a_SOURCES): Add alloc.h, syshdr.h,
	and uucnfi.h.
	* Makefile.in, unix/Makefile.in, uuconf/Makefile.in: Rebuild.

	* uucico.c (fcall): If a port was specified on the command line,
	and the current alternate does not use that port, but a later
	alternate does, then skip to the later alternate.

	* uucp.texi: Use new Texinfo commands @command, @option, @email,
	and @url.

	* uucp.texi: Update version number to 1.07.

	* uucico.8: Don't specify debugging file location, just mention
	uulog -D.
	* uuxqt.8: Likewise.
	* uux.1: Mention /var/spool/uucppublic as possible public
	directory location.

	* cu.1: Remove FILES section.  Update version number to 1.07.
	* uucp.1: Likewise.
	* uustat.1: Likewise.
	* uux.1: Likewise.
	* uucico.8: Likewise.
	* uuxqt.8: Likewise.

	* policy.h: Add some comments for modern systems.
	(HAVE_UNBLOCKED_WRITES): Default to 1.

2002-03-02  Ian Lance Taylor  <ian@airs.com>

	* trans.h (FEATURE_QUOTES): Define.
	* lib/quote.c: New file.
	* lib/quotes.c: New file.
	* lib/parse.c (ulunquote_cmd): New static function.
	(fparse_cmd): Call it before returning.
	* unix/splcmd.c (zsysdep_spool_commands): Quote command if
	necessary.  Remove whitespace check.
	* send.c (flocal_send_request): Quote command if necessary.
	(fsend_exec_file_init): Quote execution file if necessary.
	(usadd_exec_line): Add fquote parameter.
	* rec.c (flocal_rec_send_request): Quote command if necessary.
	(frec_file_end): Quote execution file if necessary.
	* xcmd.c (flocal_xcmd_request): Quote command if necessary.
	* uucico.c (fdo_call): Add FEATURE_QUOTES to -N option.